--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,23 +26,21 @@ html{
 
 body{
     font-family: "Open Sans", sans-serif;
-
 }
-
-.container{
-    margin-left: auto;
-    margin-right: auto;
-    background-color: red;
-    padding: 0 15px;
-}
-
 /* End Global Rules */
-
 /* Start Home */
 
-.container .home{
-    
+.home{
+    background-color: black;
+    width: 100%;
 }
+
+.home .container{
+    background-color: yellow;
+    width:960px;
+	margin:0 auto;
+}
+
 
 
 
