--- a/CSS/style.css
+++ b/CSS/style.css
@@ -189,7 +189,8 @@ body{
 
 /* Start services */
 .services{
-    background-color: var(--fifth-color);
+    background-color: var(--seven-color);
+    padding-bottom: 90px;
 }
 
 .services .container-services{
@@ -199,12 +200,12 @@ body{
     margin: var(--container-margin);
 }
 
-.services .container-services .title-services{
+.container-services .title-services{
     text-align: center;
     position: relative;
 }
 
-.services .container-services .title-services h4{
+.container-services .title-services h4{
     margin-top: 0;
     padding-top: 50px;
     margin-bottom: 0;
@@ -213,14 +214,14 @@ body{
     letter-spacing: 1px;
 }
 
-.services .container-services .title-services .separator{
+.container-services .title-services .separator{
     background-color: var(--main-color);
     height: 1px;
     width: 70px;
     margin-top: 30px;
 }
 
-.services .container-services .title-services .separator::after{
+.container-services .title-services .separator::after{
     content: "";
     position: absolute;
     top: 100px;
@@ -232,19 +233,40 @@ body{
     background-color: var(--fifth-color);
 }
 
-.services .container-services .title-services .info-services{
+.container-services .title-services .info-services{
     font-size: 17px;
     width: 500px;
     margin: 0 auto;
 }
 
-.services .container-services .cont-services{
-    background-color: green;
+.cont-services{
+    margin-top: 35px;
     display: flex;
     flex-wrap: wrap;
-    
+    justify-content: space-between;
+    gap: 25px;
 }
 
+.cont-services .service-1{
+    max-width: 570px;
+    display: flex;
+    justify-content: space-between;
+}
 
+.cont-services .service-1 .icon-serv-1 i{
+    font-size: 40px;
+    padding: 50px 70px 0 20px;
+    color: var(--fourth-color);
+}
+
+.cont-services .service-1 .text-serv1 h5{
+    color: var(--secondary-color);
+    font-size: 18px;
+    margin-bottom: 0;
+}
+
+.cont-services .service-1 .text-serv1 p{
+    margin-top: 0;
+}
 
 /* End services */
