--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,6 @@ body{
 }
 
 .home .container{
-    
     width:1170px;
 	margin:0 auto;
 }
@@ -270,3 +269,66 @@ body{
 }
 
 /* End services */
+
+/* Start phone advertise */
+.phone-adver{
+    background-image: url(/images/noir-1.jpg);
+}
+.phone-adver .container{
+    width:1170px;
+	margin:0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.phone-adver .container .infos{
+    width: 550px;
+    background-color: #db067b;
+    padding: 100px 0 100px 30px;
+}
+
+.infos .phone-title{
+    padding-bottom: 40px;
+    font-size: 17px;
+    font-weight: 300;
+    color: var(--seven-color);
+}
+
+.icones-infos .icon-info-1{
+    color: var(--seven-color);
+    padding-bottom: 10px;
+    font-style: 17px;
+    font-weight: 300;
+}
+
+.icones-infos .icon-info-1 i{
+    padding-right: 20px;
+}
+
+.phone-adver .container .phones{
+    width: 550px;
+    background-color: aqua;
+    position: relative;
+    display: flex;
+}
+
+.phone-adver .container .phones .black-phone, .white-phone{
+    width: 150px;
+    height: 300px;
+}
+
+.phone-adver .container .phones .black-phone img,
+.phone-adver .container .phones .white-phone img{
+    width: 100%;
+    height: 100%;
+}
+
+.phone-adver .container .phones .white-phone{
+    position: absolute;
+    top: 30%;
+    left: 60%;
+}
+
+
+
+/* End  phone advertise */
