--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,6 +34,16 @@ body{
     background-image: url(/images/noir-1.jpg);
 }
 
+.home::before{
+    content: "";
+    position: absolute;
+    top: 25%;
+    left: 0;
+    height: 256px;
+    width: 780px;
+    background-color: var(--secondary-color);
+}
+
 .home .container{
     width:1170px;
 	margin:0 auto;
@@ -109,19 +119,7 @@ body{
     margin-top: 120px;
     width: 600px;
     padding: 20px 0 0 130px;
-
     border: none;
-}
-
-.home::before{
-    content: "";
-    position: absolute;
-    top: 25%;
-    left: 0;
-    height: 256px;
-    width: 780px;
-    /* background-color: var(--secondary-color); */
-    
 }
 
 .home .container .info h3{
@@ -269,7 +267,6 @@ body{
 }
 
 /* End services */
-
 /* Start phone advertise */
 .phone-adver{
     background-image: url(/images/noir-1.jpg);
@@ -283,7 +280,6 @@ body{
 
 .phone-adver .container .infos{
     width: 550px;
-    background-color: #db067b;
     padding: 100px 0 100px 30px;
     position: relative;
     z-index: 1;
@@ -320,7 +316,6 @@ body{
 
 .phone-adver .container .phones{
     width: 550px;
-    background-color: aqua;
     position: relative;
     display: flex;
 }
@@ -374,8 +369,59 @@ body{
     top: 10%;
     left: 4%;
 }
-
-
-
-
 /* End  phone advertise */
+/* start portfolio */
+.portfolio{
+    background-color: var(--seven-color);
+}
+
+.container-portfolio{
+    width: var(--container-width);
+    margin: var(--container-margin);
+}
+
+.container-portfolio .title-portfolio{
+    text-align: center;
+    position: relative;
+}
+
+.title-portfolio h4{
+    margin-top: 0;
+    padding-top: 50px;
+    margin-bottom: 0;
+    font-size: 21px;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+
+ .title-portfolio .separator{
+    background-color: var(--main-color);
+    height: 1px;
+    width: 70px;
+    margin-top: 30px;
+}
+
+ .title-portfolio .separator::after{
+    content: "";
+    position: absolute;
+    top: 100px;
+    left: 580px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 1px solid var(--main-color);
+    background-color: var(--fifth-color);
+}
+
+.title-portfolio .info-portfolio{
+    font-size: 17px;
+    width: 500px;
+    margin: 0 auto;
+}
+
+
+
+
+
+
+/* End  portfolio */
