--- a/CSS/style.css
+++ b/CSS/style.css
@@ -451,23 +451,59 @@ body{
     padding: 6px 15px;
     color: var(--seven-color);
 }
-.links-portfolio li a:hover  .link-1{
-    background-color: transparent;
-    color: var(--fourth-color);
-}
+
 
 .links-portfolio li .link-1{
     background-color: var(--secondary-color);
     padding: 6px 15px;
     color: var(--seven-color);
 }
-
-
-
-
-
-
-
-
-
 /* End  portfolio */
+/* Start images */
+
+.images{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+.images .top-images{
+    display: flex;
+    flex-direction: row;
+}
+
+.images .bottom-images{
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.images .top-images .img,
+.images .bottom-images .img{
+    width: 400px;
+    height: 250px;
+    
+}
+
+.images .top-images .img img,
+.images .bottom-images .img img{
+    width: 100%;
+    height: 100%;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* End  images */
+
+
