--- a/CSS/style.css
+++ b/CSS/style.css
@@ -493,6 +493,55 @@ body{
 
 
 
+.top-images .img .informations{
+    position: absolute;
+    width: 400px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.top-images .img .informations .addition {
+    position: relative;
+    top: 20%;
+    left: 35%;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: var(--secondary-color);
+}
+
+.top-images .img .informations .addition i{
+    color: var(--seven-color);
+    font-size: 20px;
+    font-weight: 100;
+    position: relative;
+    top: 40%;
+    left: 40%;
+}
+
+.top-images .img .informations .texts-info{
+    background-color: var(--seven-color);
+    width: 95%;
+    padding-left: 30px;
+    padding-bottom: 20px;
+}
+
+.top-images .img .informations .texts-info h5{
+    font-size: 17px;
+    font-weight: 400;
+    margin: 20px 0 0;
+}
+
+.top-images .img .informations .texts-info span{
+    color: var(--secondary-color);
+    font-size: 13px;
+    font-weight: bold;
+}
+
+
+
 
 
 
