--- a/CSS/style.css
+++ b/CSS/style.css
@@ -540,7 +540,19 @@ body{
     font-weight: bold;
 }
 
+.portfolio .btn{
+    text-align: center;
+    margin: 30px auto 50px;
+}
 
+.portfolio .btn button{
+    background-color: var(--secondary-color);
+    border: none;
+    padding: 5px 30px;
+    color: var(--seven-color);
+    font-size: 14px;
+    font-weight: 100;
+}
 
 
 
