--- a/CSS/style.css
+++ b/CSS/style.css
@@ -722,6 +722,72 @@ body{
 }
 
 
+.about-us .about-Statistics{
+    background-image: url(/images/noir-1.jpg);
+    display: flex;
+    align-items: center;
+    height: 280px;
+    margin-top: -120px;
+    z-index: 100;
+    position: relative;
+}
+
+.about-us .about-Statistics .about-Stat{
+    background-color: var(--secondary-color);
+    width: var(--container-width);
+    height: 160px;
+    margin: var(--container-margin);
+    padding: 0 60px;
+    display: flex;
+}
+
+.about-Statistics .about-Stat .Coffee{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.about-Statistics .about-Stat .Coffee .icons{
+    width: 60px;
+    height: 60px;
+    position: relative;
+    text-align: center;
+ }
+
+.about-Statistics .about-Stat .Coffee .icons img{
+    width: 90%;
+    height: 90%;
+    color: var(--main-color);
+}
+
+.about-Statistics .about-Stat .Coffee .icons i{
+    font-size: 13px;
+    color: var(--seven-color);
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    
+}
+
+.about-Statistics .about-Stat .Coffee .number{
+    color: var(--seven-color);
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: 3px;
+    margin-bottom: 0;
+}
+.about-Statistics .about-Stat .Coffee p{
+    margin: 0;
+    color: var(--seven-color);
+    font-size: 13px;
+    
+}
+
+
+
+
 
 
 
