--- a/CSS/style.css
+++ b/CSS/style.css
@@ -452,7 +452,6 @@ body{
     color: var(--seven-color);
 }
 
-
 .links-portfolio li .link-1{
     background-color: var(--secondary-color);
     padding: 6px 15px;
@@ -552,7 +551,6 @@ body{
     font-weight: 100;
 }
 /* End  images */
-
 /* Start videos */
 
 .portfolio .videos{
@@ -588,9 +586,7 @@ body{
     font-weight: 100;
 }
 /* End  videos */
-
 /* Start ABOUT US */
-
 
 .about-us{
     background-color: var(--seven-color);
@@ -720,7 +716,6 @@ body{
     height: 100%;
 }
 
-
 .about-us .about-Statistics{
     background-image: url(/images/noir-1.jpg);
     display: flex;
@@ -783,7 +778,7 @@ body{
     font-size: 13px;
 }
 
- .about-test-skills {
+.about-test-skills {
     width: var(--container-width);
     margin: var(--container-margin);
     background-color: yellow;
@@ -791,12 +786,12 @@ body{
     justify-content: space-between;
 }
 
- .about-test-skills .title-test{
+.about-test-skills .title-test{
     text-align: center;
     position: relative;
 }
 
- .about-test-skills .title-test h4{
+.about-test-skills .title-test h4{
     margin-top: 0;
     padding-top: 50px;
     margin-bottom: 0;
@@ -805,12 +800,11 @@ body{
     letter-spacing: 1px;
 }
 
- .about-test-skills .title-test .info-test{
+.about-test-skills .title-test .info-test{
     font-size: 17px;
     width: 500px;
     margin: 0 auto;
 }
-
 
 .about-test-skills .testimonials{
     width: 550px;
@@ -833,7 +827,6 @@ body{
  .about-test-skills .testimonials .auteur .circle-log img{
     width: 100%;
     height: 100%;
-    
 }
 
 .about-test-skills .testimonials .auteur .detail{
@@ -867,7 +860,6 @@ body{
     padding-bottom: 10px;
     border:none;
 }
-
 
 .about-test-skills .testimonials  .navigation i:nth-child(1),
 .about-test-skills .testimonials  .navigation i:nth-child(3)
@@ -907,9 +899,112 @@ body{
     text-align: center;
     margin-bottom: 0;
 }
-
-
 /* End ABOUT US */
+/* Start PRICING */
+
+.pricing{
+    background-color: var(--seven-color);
+}
+
+.container-pricing{
+    width: var(--container-width);
+    margin: var(--container-margin);
+}
+
+.container-pricing .title-pricing{
+    text-align: center;
+    position: relative;
+}
+
+.title-pricing h4{
+    margin-top: 0;
+    padding-top: 50px;
+    margin-bottom: 0;
+    font-size: 21px;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+
+ .title-pricing .separator{
+    background-color: var(--main-color);
+    height: 1px;
+    width: 70px;
+    margin-top: 30px;
+}
+
+ .title-pricing .separator::after{
+    content: "";
+    position: absolute;
+    top: 100px;
+    left: 580px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 1px solid var(--main-color);
+    background-color: var(--fifth-color);
+}
+
+.title-pricing .info-pricing{
+    font-size: 17px;
+    width: 500px;
+    margin: 0 auto;
+}
+
+.pricing .container-pricing .content-pricing{
+    background-color: yellow;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 40px;
+}
+
+.pricing .container-pricing .content-pricing .basic-pricing{
+    background-color: white;
+    width: 24%;
+    text-align: center;
+    
+}
+
+.content-pricing .basic-pricing .prix-pricing{
+    border-top: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+
+}
+
+.content-pricing .basic-pricing .prix-pricing h5{
+    font-weight: 400;
+    border-bottom: none;
+}
+
+.content-pricing .basic-pricing .prix-pricing .prix{
+    font-size: 10px;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+.content-pricing .basic-pricing .prix-pricing .prix i{
+    position: relative;
+    top: -15px;
+    left:-5px;
+    font-size: 17px;
+}
+
+.content-pricing .basic-pricing .prix-pricing .prix span{
+    font-size: 34px;
+}
+
+.content-pricing .basic-pricing h5{
+    font-weight: 400;
+    border-bottom: 1px solid var(--secondary-color);
+    padding-bottom: 5px;
+}
+
+
+
+
+
+
+/* End PRICING */
 
 
 
