--- a/CSS/style.css
+++ b/CSS/style.css
@@ -994,12 +994,56 @@ body{
 }
 
 .content-pricing .basic-pricing h5{
+    width: 130px;
     font-weight: 400;
-    border-bottom: 1px solid var(--secondary-color);
-    padding-bottom: 5px;
+    border-bottom: 1.5px solid var(--secondary-color);
+    padding: 15px 0;
+    margin: auto;
 }
 
+.content-pricing .basic-pricing h5:nth-child(5){
+    
+    border-bottom: 2px solid var(--secondary-color);
+    width: 100%;
+}
 
+.content-pricing .basic-pricing .btn{
+    padding: 30px 0;
+    margin: auto;
+}
+
+.content-pricing .basic-pricing .btn button{
+    border: 1px solid var(--secondary-color);
+    background-color: var(--seven-color);
+    padding: 10px 20px;
+    font-weight: 400;
+    font-size: 13px;
+}
+
+.pricing .container-pricing .inf-pricing{
+    background-color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.inf-pricing p{
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.inf-pricing .bttn{
+    margin: 0 auto 60px;
+}
+
+.inf-pricing .bttn button{
+    padding: 10px 30px;
+    font-size: 13px;
+    background-color: var(--secondary-color);
+    color: var(--seven-color);
+    border: none;
+}
 
 
 
